# gazer_grazer

./: .gitignore  README.md  pyproject.toml
src/: db_manager.py  github_scraper.py  messages_pipeline.py  scraper_pipeline.py
